# Molvector

./: README.md  mol3d_avogadro.py  mol3d_gui.py  molvector_avogadro.py  molvector_gui.py  molvector_render.py  pyproject.toml
assets/molvector_macos.icon/: icon.json
test_files/: Fluorene.mol  c5h6.xyz
